# cmake_tools

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  artifacts.cmake  asan.cmake  check_glibc_version.cmake  clang-tidy.cmake  copy_dll.cmake  cppcheck.cmake  cvbuild.cmake  cvpkg.cmake  debug_symbols.cmake  hello.cpp  hwasan.cmake  ignore_no_pdb_warning.cmake  legacy.cmake  lldb-debug.cmake  msvc_EHsc.cmake  msvc_disable_constexpr_mutex_constructor.cmake  msvc_dynamic_crt.cmake  msvc_exception_fh3.cmake  msvc_ignore_no_pdb_warning.cmake  msvc_parallel_build.cmake  msvc_static_crt.cmake  msvc_unicode.cmake  msvc_utf8_encoding.cmake  ninja_colorful_output.cmake  output_dir.cmake  output_dir2.cmake  overlook.cmake  postfix.cmake  properties.cmake  rocsetup.cmake  source_group.cmake  summary.cmake  target_properties.cmake  tsan.cmake  (+1 more)
doc/: makefile.md
makefiles/: README.md  linux-x64-clang.mk
overlook/: .gitignore  README.md  overlook.cmake
overlook/doc/: README.md  VisualStudio.md
overlook/makefiles/: README.md  overlook-linux-x64-clang.mk
overlook/tests/detect_conflict_symbols/: CMakeLists.txt  bar.cpp  foo.cpp
test/asan/: CMakeLists.txt  double_free_test.cpp
test/copy_dll/: CMakeLists.txt  test.cpp
test/lldb_string/: CMakeLists.txt
test/msvc_utf8_encoding/: CMakeLists.txt  test.cpp
test/ninja_colorful_output/: CMakeLists.txt  test.cpp
test/tsan/: CMakeLists.txt  data_race_test.cpp  thread_leak_test.cpp
test/windows_encoding/: CMakeLists.txt
testcase1/: CMakeLists.txt
testcase10/: CMakeLists.txt
testcase11/: CMakeLists.txt
testcase12/: CMakeLists.txt
testcase13/: CMakeLists.txt  main.c
testcase14/: CMakeLists.txt
testcase15/: CMakeLists.txt  b.c
testcase16/: CMakeLists.txt  main.cpp
testcase17/: CMakeLists.txt  main.cpp
testcase18/: CMakeLists.txt  main.cpp
testcase18/new/: hello.c
testcase18/old/: hello.h
testcase19/: CMakeLists.txt  main.cpp
testcase2/: CMakeLists.txt  main.c
testcase20/: CMakeLists.txt  README.md
testcase21/: CMakeLists.txt
testcase22/: CMakeLists.txt  main.cpp
testcase23/: CMakeLists.txt  main.cpp
testcase24/: CMakeLists.txt
testcase25/: CMakeLists.txt  main.cpp
testcase26/: CMakeLists.txt
testcase27/: CMakeLists.txt  main.cpp
testcase28/: CMakeLists.txt  main.cpp
testcase29/: CMakeLists.txt  main.cpp
testcase3/: CMakeLists.txt  main.c
testcase30/: CMakeLists.txt
testcase31/: CMakeLists.txt  testbed.cpp
testcase32/: CMakeLists.txt  test.c
testcase4/: CMakeLists.txt
testcase5/: CMakeLists.txt  main.cpp
testcase6/: CMakeLists.txt  main.cpp
testcase7/: CMakeLists.txt  main.cpp
testcase8/: CMakeLists.txt
testcase9/: CMakeLists.txt
testcaseX/: CMakeLists.txt  README.md
testcase_template/: testbed.cpp
tests/detect_conflict_symbols/: main.cpp
tests/test_rule0/: CMakeLists.txt
tests/test_rule1/: main.c
tests/test_rule12/: CMakeLists.txt
tests/test_rule15/: CMakeLists.txt  README.md
tests/test_rule16/: CMakeLists.txt
tests/test_rule17/: CMakeLists.txt
tests/test_rule18/: CMakeLists.txt
tests/test_rule19/: CMakeLists.txt
tests/test_rule2/: CMakeLists.txt
tests/test_rule20/: CMakeLists.txt
tests/test_rule23/: CMakeLists.txt
tests/test_rule24/: CMakeLists.txt
tests/test_rule26/: CMakeLists.txt
tests/test_rule27/: main.cpp
tests/test_rule3/: CMakeLists.txt
tests/test_rule31/: CMakeLists.txt
tests/test_rule33/: CMakeLists.txt
tests/test_rule35/: CMakeLists.txt
tests/test_rule36/: main.cpp
tests/test_rule4/: CMakeLists.txt  analysis-clang.md  analysis-gcc.md  analysis-msvc.md  main.c
tests/test_rule7/: CMakeLists.txt
tests/testcase1/: CMakeLists.txt  main.c
tests/testcase10/: CMakeLists.txt  main.c
tests/testcase11/: CMakeLists.txt  main.cpp
tests/testcase12/: CMakeLists.txt  main.c
tests/testcase13/: CMakeLists.txt
tests/testcase14/: CMakeLists.txt  main.c
tests/testcase15/: CMakeLists.txt  a.c
tests/testcase16/: CMakeLists.txt  main.cpp
tests/testcase17/: CMakeLists.txt  README.md
tests/testcase18/: main.cpp
tests/testcase19/: CMakeLists.txt
tests/testcase2/: CMakeLists.txt  main.c
tests/testcase20/: CMakeLists.txt  main.cpp
tests/testcase21/: CMakeLists.txt  main.cpp
tests/testcase22/: CMakeLists.txt  main.cpp
tests/testcase23/: CMakeLists.txt  main.cpp
tests/testcase24/: CMakeLists.txt  main.cpp
tests/testcase25/: CMakeLists.txt  main.cpp
tests/testcase26/: CMakeLists.txt  main.cpp
tests/testcase27/: CMakeLists.txt  main.cpp
tests/testcase28/: CMakeLists.txt
tests/testcase29/: CMakeLists.txt  main.cpp
tests/testcase3/: CMakeLists.txt
tests/testcase30/: CMakeLists.txt  main.cpp
tests/testcase31/: CMakeLists.txt  main.cpp
tests/testcase32/: CMakeLists.txt  main.cpp
(+82 files in other folders)
